common/new-api/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: new-api
  namespace: new-api
  labels:
    app.kubernetes.io/name: new-api
    app.kubernetes.io/instance: new-api
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: new-api
    app.kubernetes.io/instance: new-api
  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP
